<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FormationAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="header">Formulaire de connexion</string>
    <string name="send">Envoyer</string>
    <string name="empty">Vider</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="title_activity_bonus">BonusActivity</string>

</resources>
